--- a/style.css
+++ b/style.css
@@ -1,64 +1,205 @@
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Eczar:wght@800&family=Poppins:wght@400;500&display=swap');
 /*font-family: 'Didact Gothic', sans-serif;
-font-family: 'Poppins', sans-serif;*/
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+font-family: 'Poppins', sans-serif;
+font-family: 'Black Ops One', cursive;*/
+:root {
+  --primary-color: #191717;
+  --secondary-color: #7d7c7c;
+  --third-color: #ccc8aa;
+  --light-color: #f1efef;
 }
-.ff-poppins{
-    font-family: 'Poppins', sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-.ff-dg{
-    font-family: 'Didact Gothic', sans-serif;
+body {
+  background-color: var(--light-color);
 }
-.slide-window{
-    max-width: 100%;
-    height: 50vh;
-    margin-top: 5vh;
-    border: 1px solid transparent;
-    border-radius: 50px;
-    position: relative;
+#navbar {
+  background-color: var(--primary-color);
+}
+.ff-poppins {
+  font-family: "Poppins", sans-serif;
+}
+.ff-dg {
+  font-family: "Didact Gothic", sans-serif;
+}
+.ff-Boo{
+  font-family: 'Black Ops One', cursive;
+}
+.slide-window {
+  max-width: 100%;
+  height: 50vh;
+  margin-top: 5vh;
+  border: 1px solid black;
+  position: relative;
+  margin-left: 2.5vw;
+  margin-right: 2.5vw;
+  z-index: -1;
 }
 .swiper {
-    width: 100%;
-    height: 100%;
-    border-radius: 50px;
-  }
+  width: 100%;
+  height: 40%;
+}
 
-  .swiper-slide {
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.box {
+  background-color: var(--secondary-color);
+}
+/*footer*/
+.container {
+  max-width: 1170px;
+  margin: auto;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.ul {
+  list-style: none;
+}
+.footer {
+  background-color: #24262b;
+  padding: 70px 0;
+  line-height: 1.5;
+}
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
+}
+.footer-col h4 {
+  font-size: 18px;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin-bottom: 30px;
+  font-weight: 500;
+  position: relative;
+}
+/* .footer-col h4::before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: #e91e63;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+} */
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
+}
+.footer-col ul li a:hover {
+  color: #ffffff;
+  padding-left: 8px;
+}
+.footer-col .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgb(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50px;
+  color: #ffffff;
+  transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover {
+  color: #24262b;
+  background-color: #ffffff;
+}
+
+/*hamburger*/
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+}
+
+@media (max-width: 767px) {
+  .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 574px) {
+  .footer-col {
+    width: 100%;
     text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
-
-  .swiper-slide img {
+  .slide-window {
+    height: 30vh;
+  }
+  .hamburger {
     display: block;
+  }
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  #nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: #262626;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    /* filter: brightness(80%); */
+    text-align: center;
+    transition: 0.3s;
+    z-index: 1;
   }
-  #goa_img{
-    filter: brightness(80%);
+  #nav-menu.active {
+    left: 0;
   }
-  .image_headings{
-    justify-content: center;
-    align-items: center;
-    position:absolute;
-    top:50%;
-    left:45%;
-    color:#fff;
-    transform: scale(2);
-    font-family: 'Montserrat', sans-serif;
-    text-decoration: none;
-    text-shadow: 3px 3px 5px rgba(255,255,255,0.39);
+  .nav-link {
+    margin: 16px 0;
   }
-.box{
-    background-color: #E9E7DD;
-    
+  #box1{
+    display:none;
+  }
+}
+
+/*right arrow icon in 3 div in homepage*/
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
